# apeiron

./: .gitignore  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  strategies.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
apeiron/: __init__.py  __main__.py  benchmarks.py  cache.py  config.py  demo.py  doctor.py  init.py  research.py  types.py
apeiron/api/: cli.py  mcp_server.py  python_api.py
apeiron/data/: __init__.py  benchmark_cases.json
apeiron/extract/: jina.py  markitdown.py  newspaper.py  readability.py  trafilatura.py  utils.py
apeiron/fetch/: jina.py
apeiron/fetch/ai_agent/: browser_use.py
apeiron/fetch/browser/: camoufox.py  cloakbrowser.py  flaresolverr.py  patchright.py
apeiron/fetch/http/: curl_cffi.py
apeiron/fetch/media/: yt_dlp.py
apeiron/learn/: auto_detect.py  git_ops.py  heuristics.py  strategy_store.py
apeiron/search/: arxiv.py  github.py  reddit.py  searxng.py  semantic_scholar.py  wikipedia.py
demos/: 1-fetch.tape  2-search.tape  3-fetch-pdf.tape  4-learn.tape  5-help.tape  run.sh
docker/: docker-compose.yml
docs/: benchmarks.md  comparison.md  install.md  integrations.md  pypi-publishing.md  recipes.md  release-checklist.md
docs/superpowers/plans/: 2026-06-13-audit-fixes.md
examples/: claude_desktop.md  cli.md  cursor.md  openai_agents.py  opencode.jsonc  python_api.py
scripts/: start-infra.sh  stop-infra.sh
tests/: test_benchmark.py  test_cache.py  test_cli.py  test_config_and_git_ops.py  test_demo.py  test_docs.py  test_doctor.py  test_fetch_documents.py  test_init.py  test_mcp_server.py  test_research.py  test_search_defaults.py  test_trust_metadata.py  test_youtube.py
