[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apeiron"
version = "0.1.0"
description = "Unlimited Web Access for AI Agents — self-learning, tiered-escalation scraper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["scraping", "web-scraper", "anti-bot", "self-learning", "ai-agent", "mcp"]
authors = [{ name = "insomnia" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Source = "https://github.com/insomnia-me/apeiron"

[project.scripts]
apeiron = "apeiron.api.cli:main"

[project.optional-dependencies]
all = [
    "curl-cffi>=0.7",
    "trafilatura>=1.12",
    "patchright>=1.40",
    "scrapling[fetchers]>=0.4",
    "camoufox[geoip]>=0.4",
    "browser-use>=0.1",
    "mcp>=1.2",
    "cloakbrowser>=0.3",
    "markitdown>=0.1",
    "yt-dlp>=2024",
    "httpx>=0.27",
    "readability-lxml>=0.8",
    "html2text>=2024",
    "newspaper3k>=0.2",
]
search = [
    "httpx>=0.27",
]
fetch = [
    "curl-cffi>=0.7",
    "patchright>=1.40",
    "scrapling[fetchers]>=0.4",
    "camoufox[geoip]>=0.4",
    "browser-use>=0.1",
    "cloakbrowser>=0.3",
    "yt-dlp>=2024",
]
extract = [
    "trafilatura>=1.12",
    "markitdown>=0.1",
    "readability-lxml>=0.8",
    "html2text>=2024",
    "newspaper3k>=0.2",
]
mcp = [
    "mcp>=1.2",
]

[tool.setuptools.packages.find]
include = ["apeiron*"]
