[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apeiron-agent"
version = "0.1.0"
description = "Local-first web search, fetch, and extraction tools for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "ai-agents", "web-search", "web-scraping", "llm", "markdown", "python"]
authors = [{ name = "insomnia" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Intended Audience :: Developers",
]

dependencies = [
    "httpx>=0.27",
]

[project.urls]
Source = "https://github.com/insomnia-me/apeiron"

[project.scripts]
apeiron = "apeiron.api.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "twine>=5.0",
]
all = [
    "curl-cffi>=0.7",
    "trafilatura>=1.12",
    "patchright>=1.40",
    "scrapling[fetchers]>=0.4",
    "camoufox[geoip]>=0.4",
    "browser-use>=0.1",
    "mcp>=1.2",
    "cloakbrowser>=0.3",
    "markitdown>=0.1",
    "yt-dlp>=2024",
    "httpx>=0.27",
    "readability-lxml>=0.8",
    "html2text>=2024",
    "newspaper3k>=0.2",
]
search = [
    "httpx>=0.27",
]
fetch = [
    "curl-cffi>=0.7",
    "trafilatura>=1.12",
    "readability-lxml>=0.8",
    "html2text>=2024",
]
browser = [
    "patchright>=1.40",
    "scrapling[fetchers]>=0.4",
    "camoufox[geoip]>=0.4",
    "browser-use>=0.1",
    "cloakbrowser>=0.3",
]
media = [
    "yt-dlp>=2024",
]
documents = [
    "markitdown>=0.1",
]
extract = [
    "trafilatura>=1.12",
    "markitdown>=0.1",
    "readability-lxml>=0.8",
    "html2text>=2024",
    "newspaper3k>=0.2",
]
mcp = [
    "mcp>=1.2",
]

[tool.setuptools.packages.find]
include = ["apeiron*"]

[tool.setuptools.package-data]
apeiron = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
